--- a/src/main/java/com/mycompany/proyecto_integrador1/LoginAdministrador/LoginAdministrador.form
+++ b/src/main/java/com/mycompany/proyecto_integrador1/LoginAdministrador/LoginAdministrador.form
@@ -364,15 +364,15 @@
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabel12">
+            <Component class="javax.swing.JLabel" name="Icono">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="C:\Users\Nicol Alejandra\Documents\NetBeansProjects\Proyecto-Integrador-1\src\main\java\Imagenes\Logo_principal_Login.png"/>
+                  <Image iconType="2" name="C:\Users\Nicol Alejandra\Documents\NetBeansProjects\Proyecto-Integrador-1\src\main\java\Imagenes_Niki\Imagenes_p\Logo_principal_Login.png"/>
                 </Property>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="100" y="200" width="-1" height="-1"/>
+                  <AbsoluteConstraints x="90" y="60" width="-1" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
