--- a/src/main/java/com/mycompany/proyecto_integrador1/Sistema/RegistrarVotantes.form
+++ b/src/main/java/com/mycompany/proyecto_integrador1/Sistema/RegistrarVotantes.form
@@ -275,6 +275,9 @@
               <Image iconType="3" name="/imagenes/registra_votanates/Guardar_cambiosfghbjnkml,.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel14MouseClicked"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="1210" y="710" width="-1" height="-1"/>
